kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudcart-ingress
  namespace: cloudcart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
  - host: cloudcart.local
    http:
      paths:

      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
